--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -258,6 +258,7 @@ function fnFormatDetails(aData) {
     var origin = aData[23];
     var tags = '';
     var moreInfo = aData[25];
+    var history = aData[26];
 
     $.each(aData[24], function (y, tag) {
         tags += '<span class="label">' + tag + '</span> ';
@@ -267,7 +268,39 @@ function fnFormatDetails(aData) {
         }
     });
 
-    var sOut = '<table class="table table-condensed table-striped">';
+    var historydata = '<table class="table table-condensed"><thead><td colspan="2"><b>History </b></td></thead><tbody><tr><td>';
+
+    if (history) {
+        var reverseHistory = history.reverse();
+        $.each(reverseHistory, function (y, hist) {
+            if (hist.event) {
+                historydata += // '<hr/>' +
+                        '<table class="table table-condensed table-striped">' +
+                        '<tr><td><b>Event</b></td><td>' + hist.event + '</td></tr>' +
+                        '<tr><td><b>Severity</b></td><td>' + sev2label(hist.severity) + '</td></tr>' +
+                        '<tr><td><b>Alert ID</b></td><td>' + hist.id + '</td></tr>' +
+                        '<tr><td><b>Create Time</b></td><td>' + hist.createTime + '</td></tr>' +
+                        '<tr><td><b>Receive Time</b></td><td>' + hist.receiveTime + '</td></tr>' +
+                        '<tr><td><b>Text</b></td><td>' + hist.text + '</td></tr>' +
+                        '<tr><td><b>Value</b></td><td>' + hist.value + '</td></tr>' +
+                        '</table>' +
+                        '';
+            }
+            if (hist.status) {
+                historydata += // '<hr/>' +
+                        '<table class="table table-condensed table-striped">' +
+                        '<tr><td><b>Status</b></td><td>' + stat2label(hist.status) + '</td></tr>' +
+                        '<tr><td><b>Update Time</b></td><td>' + hist.updateTime + '</td></tr>' +
+                        '</table>' +
+                        '';
+            }
+        });
+        historydata += '</td></tr></tbody></table>'
+    }
+
+    var sOut = '<table border=1><tbody><tr><td>'; // 1
+
+    sOut += '<table class="table table-condensed table-striped">';  // 2
     sOut += '<tr class="odd"><td><b>Alert ID</td><td>' + alertid + '</td></tr>';
     sOut += '<tr class="even"><td><b>Last Receive Alert ID</b></td><td>' + lastReceiveId + '</td></tr>';
     sOut += '<tr class="odd"><td><b>Create Time</b></td><td>' + createTime + '</td></tr>';
@@ -294,7 +327,11 @@ function fnFormatDetails(aData) {
     sOut += '<tr class="even"><td><b>Tags</b></td><td>' + tags + '</td></tr>';
     // TODO(nsatterl): Graphs
     sOut += '<tr class="odd"><td><b>More Info</b></td><td>' + moreInfo + '</td></tr>';
-    sOut += '</table>';
+    sOut += '</table>'; // 2
+
+    sOut += '</td><td>'; // 1
+    sOut += historydata;
+    sOut += '</td></tr></tbody></table>'; // 1
 
     return sOut;
 }
@@ -435,10 +472,6 @@ function worker() {
 
             $.each(data.response.alerts.alertDetails, function (i, ad) {
 
-                //ad.severity = ad.severity.charAt(0).toUpperCase() + ad.severity.slice(1).toLowerCase();
-                //ad.previousSeverity = ad.previousSeverity.charAt(0).toUpperCase() + ad.previousSeverity.slice(1).toLowerCase();
-                //ad.status = ad.status.charAt(0).toUpperCase() + ad.status.slice(1).toLowerCase();
-
                 var severityCode;
                 switch (ad.severity) {
                     case 'Critical':
@@ -498,7 +531,8 @@ function worker() {
                     ad.summary,
                     ad.origin,
                     ad.tags,
-                    ad.moreInfo
+                    ad.moreInfo,
+                    ad.history
                 ]);
 
             });
