--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -181,7 +181,7 @@
                     <th>Severity</th>
                     <th>Status</th>
                     <th>Last Receive Time</th>
-                    <th>Dupl. Count</th>
+                    <th>Dupl.</th>
                     <th>Environment</th>
                     <th>Service</th>
                     <th>Resource</th>
@@ -199,7 +199,7 @@
                     <th>Severity</th>
                     <th>Status</th>
                     <th>Last Receive Time</th>
-                    <th>Dupl. Count</th>
+                    <th>Dupl.</th>
                     <th>Environment</th>
                     <th>Service</th>
                     <th>Resource</th>
