--- a/dashboard/v2/console2.html
+++ b/dashboard/v2/console2.html
@@ -227,6 +227,36 @@ var asiFilters = {
     'Other':    '&-service=Web|Common|Platform'
 };
 
+var api_host = document.domain + ":8000";
+
+// ************************************* DO NOT EDIT ANYTHING BELOW THIS LINE **************************************
+
+var CRITICAL_SEV_CODE = 1;
+var MAJOR_SEV_CODE = 2;
+var MINOR_SEV_CODE = 3;
+var WARNING_SEV_CODE = 4;
+var INDETER_SEV_CODE = 5;
+var CLEARED_SEV_CODE = 5;
+var NORMAL_SEV_CODE = 5;
+var INFORM_SEV_CODE = 6;
+var DEBUG_SEV_CODE = 7;
+var AUTH_SEV_CODE = 8;
+var UNKNOWN_SEV_CODE = 9;
+
+CRITICAL = 'critical';
+MAJOR = 'major';
+MINOR = 'minor';
+WARNING = 'warning';
+INDETERMINATE = 'indeterminate';
+CLEARED = 'cleared';
+NORMAL = 'normal';
+INFORM = 'informational';
+DEBUG = 'debug';
+AUTH = 'security';
+UNKNOWN = 'unknown';
+
+ALL = [CRITICAL, MAJOR, MINOR, WARNING, INDETERMINATE, CLEARED, NORMAL, INFORM, DEBUG, AUTH, UNKNOWN];
+
 var SEVERITY_MAP = {
     'critical': 1,
     'major': 2,
@@ -240,6 +270,81 @@ var SEVERITY_MAP = {
     'auth': 8,
     'unknown': 9
 };
+
+function sev2label(severity) {
+    var label;
+    switch (severity) {
+        case CRITICAL:
+            label = 'label-critical';
+            break;
+        case MAJOR:
+            label = 'label-major';
+            break;
+        case MINOR:
+            label = 'label-minor';
+            break;
+        case WARNING:
+            label = 'label-warning';
+            break;
+        case NORMAL:
+            label = 'label-normal';
+            break;
+        case DEBUG:
+            label = 'label-inverse';
+            break;
+        default:
+            label = '';
+    }
+    severity = severity.charAt(0).toUpperCase() + severity.slice(1).toLowerCase();
+
+    return('<span class="label ' + label + '">' + severity + '</span>');
+}
+
+OPEN = 'open';
+ACK = 'ack';
+CLOSED = 'closed';
+EXPIRED = 'expired';
+UNKNOWN = 'unknown';
+
+ALL = [OPEN, ACK, CLOSED, EXPIRED, UNKNOWN];
+
+function stat2label(status) {
+
+    var label;
+
+    switch (status) {
+        case OPEN:
+            label = 'label-open';
+            break;
+        case ACK:
+            label = 'label-ack';
+            break;
+        case CLOSED:
+            label = 'label-closed';
+            break;
+        case EXPIRED:
+            label = 'label-expired';
+            break;
+        case UNKNOWN:
+            label = 'label-unknown';
+            break;
+        default:
+            label = '';
+    }
+    status = status.charAt(0).toUpperCase() + status.slice(1).toLowerCase();
+
+    return('<span class="label ' + label + '">' + status + '</span>');
+}
+
+function date2iso8601(datetime) {
+    var d = new Date(datetime);
+    return d.getFullYear() + '/' + (d.getMonth() + 1) + '/' + d.getDate() + ' ' + d.toTimeString().split(' ')[0]
+}
+
+function date2str(datetime) {
+    var d = new Date(datetime);
+    return d.toLocaleString();
+}
 
 var oTable;
 var filter = '';
@@ -302,7 +407,7 @@ $.fn.dataTableExt.oApi.fnReloadAjax = function ( oSettings, sNewSource, fnCallba
 };
 
 $(document).ready(function() {
-
+    var ti;
     oTable = $('#alerts').dataTable({
         "bProcessing": true,
         "bServerSide": false,
@@ -310,6 +415,26 @@ $(document).ready(function() {
         "bPaginate": true,
         "bDeferRender": true,
         "sAjaxSource": "http://localhost:8000/alerta/api/v2/alerts?" + filter,
+        "fnRowCallback": function (nRow, aData, iDisplayIndex, iDisplayIndexFull) {
+            nRow.className = 'severity-' + aData[0] + ' status-' + aData[1];
+
+            if (aData[17] == "noChange") {
+                ti = '<i class="icon-minus"></i>&nbsp;'
+            } else if (aData[17] == "moreSevere") {
+                ti = '<i class="icon-arrow-up"></i>&nbsp;'
+            } else if (aData[17] == "lessSevere") {
+                ti = '<i class="icon-arrow-down"></i>&nbsp;'
+            } else {
+                ti = '<i class="icon-random"></i>&nbsp;'
+            }
+            $('td:eq(0)', nRow).html(ti + sev2label(aData[0]));
+            //$('td:eq(1)', nRow).html(stat2label(aData[1]));
+
+            var d = new Date(aData[2]);
+            // $('td:eq(2)', nRow).html(d.toLocaleString());
+            //$('td:eq(2)', nRow).html(date2iso8601(d));
+
+        },
         "fnServerData": function (sSource, aoData, fnCallback) {
             $.ajax( {
                 "dataType": 'json',
@@ -358,9 +483,150 @@ $(document).ready(function() {
                     fnCallback(json);
                 }
             });
-        }
+        },
+        "aoColumns": [
+            { "sWidth": "5%", "iDataSort": 10, "sClass": "align-center" },
+            { "sWidth": "5%", "sClass": "align-center" },
+            { "sWidth": "10%", "sType": "date", "sClass": "align-center" },
+            { "sWidth": "5%", "sClass": "align-center" },
+            { "sWidth": "5%", "sClass": "align-center" },
+            { "sWidth": "5%", "sClass": "align-center" },
+            { "sWidth": "10%", "sClass": "align-center" },
+            { "sWidth": "10%", "sClass": "align-center" },
+            { "sWidth": "10%", "sClass": "align-center" },
+            { "sWidth": "35%" },
+            { "bVisible": false }
+        ],
+        "aaSorting": [
+            [2, 'desc']
+        ],
+        "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>"
     });
     refreshAlerts(true);
+});
+
+function fnFormatDetails(aData) {
+    var severity = aData[0];
+    var status = aData[1];
+    var lastReceiveTime = aData[2];
+    var duplicateCount = aData[3];
+    var environment = aData[4];
+    var service = aData[5];
+    var cluster = '';
+    var resource = aData[6];
+    var event = aData[7];
+    var value = aData[8];
+    var text = aData[9];
+    var severityCode = aData[10];
+    var alertid = aData[11];
+    var lastReceiveId = aData[12];
+    var createTime = aData[13];
+    var receiveTime = aData[14];
+    var group = aData[15];
+    var previousSeverity = aData[16];
+    var trendIndication = aData[17];
+    var thresholdInfo = aData[18];
+    var timeout = aData[19];
+    var type = aData[20];
+    var repeat = aData[21];
+    var summary = aData[22];
+    var origin = aData[23];
+    var tags = '';
+    var moreInfo = aData[25];
+    var history = aData[26];
+
+    $.each(aData[24], function (y, tag) {
+        tags += '<span class="label">' + tag + '</span> ';
+        var t = tag.split(':');
+        if (t[0] == 'cluster') {
+            cluster = t[1];
+        }
+    });
+
+    var historydata = '<table class="table table-condensed"><thead><td colspan="2"><b>History </b></td></thead><tbody><tr><td>';
+
+    if (history) {
+        var reverseHistory = history.reverse();
+        $.each(reverseHistory, function (y, hist) {
+            if (hist.event) {
+                historydata += // '<hr/>' +
+                        '<table class="table table-condensed table-striped">' +
+                                '<tr><td><b>Event</b></td><td>' + hist.event + '</td></tr>' +
+                                '<tr><td><b>Severity</b></td><td>' + sev2label(hist.severity) + '</td></tr>' +
+                                '<tr><td><b>Alert ID</b></td><td>' + hist.id + '</td></tr>' +
+                                '<tr><td><b>Create Time</b></td><td>' + date2str(hist.createTime) + '</td></tr>' +
+                                '<tr><td><b>Receive Time</b></td><td>' + date2str(hist.receiveTime) + '</td></tr>' +
+                                '<tr><td><b>Text</b></td><td>' + hist.text + '</td></tr>' +
+                                '<tr><td><b>Value</b></td><td>' + hist.value + '</td></tr>' +
+                                '</table>' +
+                                '';
+            }
+            if (hist.status) {
+                historydata += // '<hr/>' +
+                        '<table class="table table-condensed table-striped">' +
+                                '<tr><td><b>Status</b></td><td>' + stat2label(hist.status) + '</td></tr>' +
+                                '<tr><td><b>Update Time</b></td><td>' + hist.updateTime + '</td></tr>' +
+                                '</table>' +
+                                '';
+            }
+        });
+        historydata += '</td></tr></tbody></table>'
+    }
+
+    var sOut = '<table border=1><tbody><tr><td>'; // 1
+
+    sOut += '<table class="table table-condensed table-striped">';  // 2
+    sOut += '<tr class="odd"><td><b>Alert ID</td><td>' + alertid + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Last Receive Alert ID</b></td><td>' + lastReceiveId + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Create Time</b></td><td>' + date2str(createTime) + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Receive Time</b></td><td>' + date2str(receiveTime) + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Last Receive Time</b></td><td>' + date2str(lastReceiveTime) + '</td></tr>';
+
+    sOut += '<tr class="even"><td><b>Environment</b></td><td>' + environment + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Service</b></td><td>' + service + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Resource</b></td><td>' + resource + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Event</b></td><td>' + event + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Group</b></td><td>' + group + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Severity</b></td><td>' + sev2label(previousSeverity) + ' -> ' + sev2label(severity) + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Status</b></td><td>' + stat2label(status) + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Value</b></td><td>' + value + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Text</b></td><td>' + text + '</td></tr>';
+
+    sOut += '<tr class="odd"><td><b>Trend Indication</b></td><td>' + trendIndication + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Threshold Info</b></td><td>' + thresholdInfo + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Timeout</b></td><td>' + timeout + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Type</b></td><td>' + type + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Repeat</b></td><td>' + repeat + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Summary</b></td><td>' + summary + '</td></tr>';
+    sOut += '<tr class="odd"><td><b>Origin</b></td><td>' + origin + '</td></tr>';
+    sOut += '<tr class="even"><td><b>Tags</b></td><td>' + tags + '<a id="' + alertid + '" class="tag-alert" rel="tooltip" title="Tag Alert"><i class="icon-tags"></i></a>' + '</td></tr>';
+    // TODO(nsatterl): Graphs
+    sOut += '<tr class="odd"><td><b>More Info</b></td><td>' + moreInfo + '</td></tr>';
+    sOut += '</table>'; // 2
+
+    sOut += '</td><td>'; // 1
+    sOut += historydata;
+    sOut += '</td></tr></tbody></table>'; // 1
+
+    return sOut;
+}
+
+$('#alerts tbody tr').live('click', function () {
+
+    var nTr = this;
+
+    // var i = $.inArray( nTr, anOpen );
+
+    if (oTable.fnIsOpen(nTr)) {
+        /* This row is already open - close it */
+        // this.src = "../examples_support/details_open.png";
+        oTable.fnClose(nTr);
+    }
+    else {
+        /* Open this row */
+        // this.src = "../examples_support/details_close.png";
+        oTable.fnOpen(nTr, fnFormatDetails(oTable.fnGetData(nTr)), 'details');
+    }
 });
 
 function refreshAlerts(refresh) {
@@ -404,6 +670,18 @@ function updateFromDate(seconds) {
     }
     refreshAlerts(false);
 }
+
+$('tbody').on('click', '.tag-alert', function () {
+    var tag = prompt("Enter tag eg. london, location:london, datacentre:location=london");
+    if (tag != null && tag != "") {
+        $.ajax({
+            type: 'PUT',
+            contentType: 'application/json',
+            url: 'http://' + api_host + '/alerta/api/v2/alerts/alert/' + this.id + '/tag',
+            data: JSON.stringify({ tag: tag })
+        });
+    }
+});
 
 </script>
 
